added bootstrap 4 beta

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,17 @@
   <!-- endinject -->
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>Test</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">test</div>
+            <div class="col-sm-6">test</div>
+        </div>
+    </div>
 
   <app>Loading...</app>
 
